--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -21,6 +21,14 @@
 	}
 }
 
+@mixin oLoadingGetColors($color) {
+	$variant: map-get($o-loading-colors, $color);
+	@include oBrandConfigureFor('o-overlay', $variant) {
+		border: 4px solid rgba(oBrandGet('default-color'), 0.25);
+		border-top-color: oBrandGet('default-color');
+	};
+}
+
 /// Base styles for a loading indicator
 @mixin oLoading() {
 
@@ -42,15 +50,12 @@
 /// @param {String|Color} $color
 @mixin oLoadingColor($color) {
 	@if type-of($color) == 'string' {
-		$color: map-get($o-loading-colors, $color);
+		@include _oLoadingGetColors($color);
 
 		@if not $color {
 			@warn "Color not found for o-loading";
 		}
 	}
-
-	border: 4px solid rgba($color, 0.25);
-	border-top-color: $color;
 }
 
 /// Size variation for a loading indicator
