--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,11 +16,12 @@ $o-loading-animation-keyframes: false !default;
 
 /// Predefined color themes
 ///
-/// @type Map
-$o-loading-colors: (
-	'light': oColorsGetPaletteColor('white'),
-	'dark': oColorsGetPaletteColor('black-80')
-);
+/// @type List
+$o-loading-colors: ('light', 'dark');
+// (
+// 	'light': oColorsGetPaletteColor('white'),
+// 	'dark': oColorsGetPaletteColor('black-80')
+// );
 
 /// Predefined sizes
 ///
