--- a/src/scss/_brand.scss
+++ b/src/scss/_brand.scss
@@ -12,3 +12,18 @@
 		'dark': true
 	)
 ));
+
+@include oBrandDefine('o-loading', 'internal', (
+	'variables': (
+		'light': (
+			default-color: oColorsGetPaletteColor('white')
+		),
+		'dark': (
+			default-color: oColorsGetPaletteColor('slate')
+		)
+	),
+	'settings': (
+		'light': true,
+		'dark': true
+	)
+));
