--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,8 @@
 @import 'o-colors/main';
-
+@import 'o-brand/main';
+$o-brand: 'master';
 @import 'src/scss/variables';
+@import 'src/scss/brand';
 @import 'src/scss/mixins';
 
 @if $o-loading-is-silent == false {
@@ -9,9 +11,9 @@
 		@include oLoading();
 	}
 
-	@each $key, $value in $o-loading-colors {
-		.o-loading--#{$key} {
-			@include oLoadingColor($value);
+	@each $color in $o-loading-colors {
+		.o-loading--#{$color} {
+			@include oLoadingColor($color);
 		}
 	}
 
