Add whitelabel brand.

--- a/src/scss/_brand.scss
+++ b/src/scss/_brand.scss
@@ -39,3 +39,18 @@
 		'dark'
 	)
 ));
+
+@include oBrandDefine('o-loading', 'whitelabel', (
+	'variables': (
+		'light': (
+			default-color: oColorsGetPaletteColor('white')
+		),
+		'dark': (
+			default-color: oColorsGetPaletteColor('black')
+		)
+	),
+	'supports-variants': (
+		'light',
+		'dark'
+	)
+));
