--- a/demos/src/demo.scss
+++ b/demos/src/demo.scss
@@ -21,7 +21,9 @@ h3 {
 }
 
 .demo-card--dark {
-	background: oColorsGetPaletteColor('slate');
+	// @todo figure out how to brand demos without adding brand variables just for demos.
+	// https://github.com/Financial-Times/o-brand/issues/31
+	background: if($o-brand == 'whitelabel', oColorsGetPaletteColor('black'), oColorsGetPaletteColor('slate'));
 }
 
 .demo-toggle {
