--- a/demos/src/demo.scss
+++ b/demos/src/demo.scss
@@ -14,6 +14,8 @@ $o-loading-is-silent: false;
 
 // reversed background
 .demo--light {
+	// @todo figure out how to brand demos without adding brand variables just for demos.
+	// https://github.com/Financial-Times/o-brand/issues/31
 	background: if($o-brand == 'whitelabel', oColorsGetPaletteColor('black'), oColorsGetPaletteColor('slate'));
 }
 
