--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -7,17 +7,27 @@
 ///
 /// @private
 @mixin _oLoadingAnimationKeyframes {
-	@if not $o-loading-animation-keyframes {
-		@keyframes o-loading-spinner {
-			0% {
-				transform: rotate(0deg);
+	// the keyframes must be defined _before_ first use
+	@at-root {
+		@if not $o-loading-animation-keyframes {
+			@keyframes o-loading-spinner {
+				0% {
+					transform: rotate(0deg);
+				}
+				100% {
+					transform: rotate(360deg);
+				}
 			}
-			100% {
-				transform: rotate(360deg);
-			}
-		}
 
-		$o-loading-animation-keyframes: true !global;
+			$o-loading-animation-keyframes: true !global;
+		}
+	}
+
+	// HACK: creates a new selector to output the rules _after_ keyframes
+	& {
+		display: inline-block;
+		border-radius: 50%;
+		animation: o-loading-spinner 1s infinite linear;
 	}
 }
 
@@ -63,10 +73,6 @@
 	$size: map-get($opts, 'size');
 
 	@include _oLoadingAnimationKeyframes();
-
-	display: inline-block;
-	border-radius: 50%;
-	animation: o-loading-spinner 1s infinite linear;
 
 	@if $color {
 		@include _oLoadingColor($color);
