--- a/demos/src/demo.scss
+++ b/demos/src/demo.scss
@@ -1,7 +1,7 @@
 $o-loading-is-silent: false;
 @import '../../main';
 
-.demo {
+body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
