--- a/demos/src/loading-spinner.mustache
+++ b/demos/src/loading-spinner.mustache
@@ -1,5 +1,6 @@
-<div class="demo demo--{{theme}}">
+<body class="demo--{{theme}}">
+	<div class="o-loading o-loading--{{theme}} o-loading--mini"></div>
 	<div class="o-loading o-loading--{{theme}} o-loading--small"></div>
 	<div class="o-loading o-loading--{{theme}} o-loading--medium"></div>
 	<div class="o-loading o-loading--{{theme}} o-loading--large"></div>
-</div>
+</body>
