--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -26,8 +26,8 @@ $o-loading-themes: (
 ///
 /// @type Map
 $o-loading-sizes: (
-	'mini': 10px,
-	'small': 22px,
-	'medium': 30px,
-	'large': 36px
+	'mini': ('size': 12px, 'border': 2px),
+	'small': ('size': 20px, 'border': 3px),
+	'medium': ('size': 28px, 'border': 4px),
+	'large': ('size': 36px, 'border': 5px)
 );
